prefixing vendor.js

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     
 
-    <script src="assets/vendor.js"></script>
+    <script src="wildflower-logo-maker/assets/vendor.js"></script>
     <script src="assets/logo-maker.js"></script>
 
     
